# netcdf-to-geodataframe

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
netcdf2dataframe/: __init__.py  read_netcdf.py
tests/: conftest.py  test_netcdf2dataframe.py
