[tool.poetry]
name = "netcdf2dataframe"
version = "0.1.0"
description = "Small utilities to transform netCDF files into (GeoDataFrames)"
authors = ["Thomas Grandjean <thomas.grandjean@developpement-durable.gouv.fr>"]
readme = "README.md"
homepage = "https://github.com/tgrandje/french-cities/"
keywords = ["climatology", "oceanography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
netcdf4 = "^1.7.2"
geopandas = "^1.0.1"
importlib-metadata = "^8.6.1"

[tool.poetry.group.dev.dependencies]
spyder = "^6.0.4"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
